Add extend questions group feature

--- a/Comp-Footer.html
+++ b/Comp-Footer.html
@@ -1,4 +1,4 @@
-<footer class="absolute bottom-0">
+<footer >
   <p class="text-center text-gray-500 text-xs">
     &copy;2022 Cairo Confessions All rights reserved.
   </p>
