--- a/index-js.html
+++ b/index-js.html
@@ -1,13 +1,13 @@
 <script>
   // var questions
 
-  // window.onload = load;
+  window.onload = load;
 
-  // function load(){
-  // google.script.run
-  // .withSuccessHandler(setQuestions)
-  // .getQuestionsList()
-  // }
+  function load(){
+  google.script.run
+  .withSuccessHandler(setQuestions)
+  .getQuestionsList()
+  }
 
   const setQuestions = (questionsLoad)=>{
     questions = JSON.parse(questionsLoad);
@@ -19,16 +19,15 @@
   // applyNonValidation();
   }
 
-const addQuestionsGroup = (e)=>{
-  console.log(e)
-// google.script.run.withSucessHandler((html)=>{
-//   $(e.target.id).append(html)
-//   }).include(indexGen,{id: e.target.id})
+  const addQuestionsGroup = (html, groupLabel)=>{
+    console.log("clicked!")
+    const group = $('.'+groupLabel)
+    console.log(group)
+    group.append(html);
+  }
 
-}
-
-const collectAllFields = ()=>{
+  const collectAllFields = ()=>{
     const data = $('form').serializeArray();
     console.log(data);
-}
+  }
 </script>
